fix: Horizontal overflow if too narrow

--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -22,8 +22,7 @@ body {
 	flex-direction: column;
 	gap: var(--spacing_m);
 	position: relative;
-	max-width: 100vw;
-	width: var(--body_width);
+	max-width: var(--body_width);
 	margin: var(--spacing_m) auto;
 	padding: 0 var(--spacing_m);
 	box-sizing: border-box;
